@@ -1,5 +1,9 @@
 2006-12-28 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
 
+	* CamelliaTransform.cs: ちょびっと整理
+
+2006-12-28 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
+
 	* CamelliaTransform.cs:
 	* CamelliaTransformLE.cs:
 	* CamelliaTransformBE.cs: 共通部分を基底クラスに統合
